--- a/app/src/main/res/drawable/button_change_text_color.xml
+++ b/app/src/main/res/drawable/button_change_text_color.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <selector xmlns:android="http://schemas.android.com/apk/res/android">
-    <item android:color="@color/colorPrimary" android:state_pressed="false"/>
-    <item android:color="@color/greenAfterClickOnBtn"/>
+    <item android:color="@color/color_primary" android:state_pressed="false"/>
+    <item android:color="@color/green_after_click_on_btn"/>
 </selector>
