--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -7,7 +7,7 @@
     <color name="teal_700">#FF018786</color>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
-    <color name="colorOfTextAdd">#3574FA</color>
-    <color name="colorPrimary">#DBDBDB</color>
-    <color name="greenAfterClickOnBtn">#7ED321</color>
+    <color name="color_of_text_add">#3574FA</color>
+    <color name="color_primary">#DBDBDB</color>
+    <color name="green_after_click_on_btn">#7ED321</color>
 </resources>
