--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -10,4 +10,6 @@
     <color name="color_of_text_add">#3574FA</color>
     <color name="color_primary">#DBDBDB</color>
     <color name="green_after_click_on_btn">#7ED321</color>
+    <color name="cell_title_color">#666664</color>
+    <color name="cell_value_color">#4a90e2</color>
 </resources>
