--- a/app/src/main/res/layout/activity_add_item.xml
+++ b/app/src/main/res/layout/activity_add_item.xml
@@ -46,6 +46,7 @@
         app:layout_constraintTop_toBottomOf="@+id/edit_expenses" >
         <com.google.android.material.textfield.TextInputEditText
             android:id="@+id/name_of_expenses_main_field"
+            android:inputType="numberDecimal"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:textColor="@color/color_of_text_add"
