--- a/app/src/main/res/layout/activity_add_item.xml
+++ b/app/src/main/res/layout/activity_add_item.xml
@@ -61,6 +61,7 @@
         android:layout_marginStart="112dp"
         android:layout_marginTop="57dp"
         android:layout_marginEnd="112dp"
+        android:enabled="false"
         android:drawableLeft="@drawable/shape_change_color_after_click"
         android:text="@string/button_to_add"
         android:textColor="@drawable/button_change_text_color"
