--- a/app/src/main/res/layout/main_fragments_activity.xml
+++ b/app/src/main/res/layout/main_fragments_activity.xml
@@ -38,5 +38,15 @@
         android:layout_height="match_parent"
         app:layout_behavior="@string/appbar_scrolling_view_behavior"
          />
+    <com.google.android.material.floatingactionbutton.FloatingActionButton
+        android:id="@+id/add_button_main"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="bottom|end"
+        android:layout_marginEnd="16dp"
+        android:layout_marginBottom="16dp"
+        android:backgroundTint="@color/add_button_main"
+        app:tint="@color/white"
+        android:src="@drawable/ic_baseline" />
 
 </androidx.coordinatorlayout.widget.CoordinatorLayout>
