--- a/app/src/main/res/layout/activity_add_item.xml
+++ b/app/src/main/res/layout/activity_add_item.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@null"
-    tools:context=".AddItemActivity"
+    tools:context=".screens.add_item.AddItemActivity"
     tools:layout_editor_absoluteX="0dp">
 
 
@@ -17,7 +17,7 @@
         android:layout_marginTop="113dp"
         android:layout_marginEnd="32dp"
         android:hint="@string/edit_expenses"
-        android:textColorHint="@color/color_of_text_add"
+        android:textColorHint="@color/main_blue"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" >
@@ -26,7 +26,7 @@
             android:inputType="numberDecimal"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:textColor="@color/color_of_text_add"
+            android:textColor="@color/main_blue"
 
              />
         </com.google.android.material.textfield.TextInputLayout>
@@ -41,7 +41,7 @@
         android:layout_marginEnd="32dp"
 
         android:hint="@string/name_of_expenses"
-        android:textColorHint="@color/color_of_text_add"
+        android:textColorHint="@color/main_blue"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/edit_expenses" >
@@ -49,7 +49,7 @@
             android:id="@+id/name_of_expenses_main_field"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:textColor="@color/color_of_text_add"
+            android:textColor="@color/main_blue"
             />
         </com.google.android.material.textfield.TextInputLayout>
 
