--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -7,7 +7,7 @@
     <color name="teal_700">#FF018786</color>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
-    <color name="color_of_text_add">#3574FA</color>
+    <color name="main_blue">#3574FA</color>
     <color name="color_primary">#DBDBDB</color>
     <color name="all_green_elements">#7ED321</color>
     <color name="cell_title_color">#666664</color>
