--- a/app/src/main/res/layout/login_activity.xml
+++ b/app/src/main/res/layout/login_activity.xml
@@ -9,7 +9,7 @@
         android:id="@+id/logoView"
         android:layout_width="174dp"
         android:layout_height="153dp"
-        android:src="@drawable/logo"
+        android:src="@drawable/ic_logo"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintBottom_toBottomOf="parent"
