--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -16,6 +16,9 @@
     <color name="not_select_tab_text">#8BAAEF</color>
     <color name="indicator_line">#FFC107</color>
     <color name="add_button_main">#FF9E57</color>
+    <color name="selection_menu">#333F59</color>
+    <color name="not_selection_text_">#8BAAEF</color>
+    <color name="selected_cell_menu">#EFEFEF</color>
 
 
 </resources>
