--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -11,7 +11,7 @@
         <item name="colorOnSecondary">@color/black</item>
         <item name="colorControlActivated">@color/color_primary</item>
         <!-- Status bar color. -->
-        <item name="android:statusBarColor" tools:targetApi="l">?attr/colorPrimaryVariant</item>
+        <item name="colorPrimaryDark">@color/main_blue</item>
         <!-- Customize your theme here. -->
         <item name="windowActionModeOverlay">true</item>
         <item name="actionModeBackground">@color/selection_menu</item>
