--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -20,6 +20,8 @@
     <color name="not_selection_text_">#8BAAEF</color>
     <color name="selected_cell_menu">#EFEFEF</color>
     <color name="expenses_blue">#4A90E2</color>
+    <color name="mr_red">#ff0000</color>
+    <color name="mr_yellow">#ffff00</color>
 
 
 </resources>
