--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -7,15 +7,15 @@
     <color name="teal_700">#FF018786</color>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
-    <color name="main_blue">#3574FA</color>
+<!--    <color name="main_blue">#3574FA</color>-->
     <color name="color_primary">#DBDBDB</color>
-    <color name="all_green_elements">#7ED321</color>
+<!--    <color name="all_green_elements">#7ED321</color>-->
     <color name="cell_title_color">#666664</color>
     <color name="cell_value_color">#4a90e2</color>
-    <color name="main_background">#3574FA</color>
+<!--    <color name="main_background">#3574FA</color>-->
     <color name="not_select_tab_text">#8BAAEF</color>
     <color name="indicator_line">#FFC107</color>
-    <color name="add_button_main">#FF9E57</color>
+<!--    <color name="add_button_main">#FF9E57</color>-->
     <color name="selection_menu">#333F59</color>
     <color name="not_selection_text_">#8BAAEF</color>
     <color name="selected_cell_menu">#EFEFEF</color>
