--- a/app/src/main/res/layout/activity_add_item.xml
+++ b/app/src/main/res/layout/activity_add_item.xml
@@ -23,6 +23,7 @@
         app:layout_constraintTop_toTopOf="parent" >
         <com.google.android.material.textfield.TextInputEditText
             android:id="@+id/edit_expenses_main_field"
+            android:maxLength="7"
             android:inputType="numberDecimal"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
@@ -39,7 +40,6 @@
         android:layout_marginStart="32dp"
         android:layout_marginTop="8dp"
         android:layout_marginEnd="32dp"
-
         android:hint="@string/name_of_expenses"
         android:textColorHint="@color/main_blue"
         app:layout_constraintEnd_toEndOf="parent"
@@ -47,6 +47,7 @@
         app:layout_constraintTop_toBottomOf="@+id/edit_expenses" >
         <com.google.android.material.textfield.TextInputEditText
             android:id="@+id/name_of_expenses_main_field"
+            android:maxLength="20"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:textColor="@color/main_blue"
